Show hamburger menu on mobile and fix title padding

--- a/src/assets/css/librarybrowser.css
+++ b/src/assets/css/librarybrowser.css
@@ -115,7 +115,7 @@
     display: -webkit-inline-box;
     display: -webkit-inline-flex;
     display: inline-flex;
-    margin: 0.3em 0 0 0.5em;
+    margin: 0 0 0 0.5em;
     height: 1.7em;
     -webkit-box-align: center;
     -webkit-align-items: center;
@@ -242,7 +242,6 @@
 }
 
 @media all and (min-width: 40em) {
-    .dashboardDocument .adminDrawerLogo,
     .dashboardDocument .mainDrawerButton {
         display: none !important;
     }
@@ -265,12 +264,6 @@
 
     .dashboardDocument .skinBody {
         left: 20em;
-    }
-}
-
-@media all and (max-width: 60em) {
-    .libraryDocument .mainDrawerButton {
-        display: none;
     }
 }
 
